Update CSS and HTML

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
           <img src="./img/1.jpg" alt="pc1">
           <div class="pc-content">
             <span class="label">Hemen Al Sonra Ode</span>
-            <p>lorem lorem loremmmermemrmerm</p>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id, libero.
+            </p>
+            <div class="rating-container">
+              <i class="fa-regular fa-star rating-start-filled"></i>
+              <i class="fa-regular fa-star rating-start-filled"></i>
+              <i class="fa-regular fa-star rating-start-filled"></i>
+              <i class="fa-regular fa-star rating-start-filled"></i>
+              <i class="fa-regular fa-star rating-start-filled"></i>
+            </div>
             <h4>20.000 tl</h4>
           </div>
         </div>
@@ -29,12 +32,12 @@
           <img src="./img/2.jpg" alt="pc2">
           <div class="pc-content">
             <span class="label">Hemen Al Sonra Ode</span>
-            <p>lorem lorem loremmmermemrmerm</p>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, non?</p>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
             <h4>20.000 tl</h4>
           </div>
         </div>
@@ -42,12 +45,12 @@
           <img src="./img/3.jpg" alt="pc3">
           <div class="pc-content">
             <span class="label">Hemen Al Sonra Ode</span>
-            <p>lorem lorem loremmmermemrmerm</p>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, veniam.</p>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
             <h4>20.000 tl</h4>
             <button type="button" class="btn">Sepete ekle</button>
           </div>
@@ -56,12 +59,12 @@
           <img src="./img/4.jpg" alt="pc4">
           <div class="pc-content">
             <span class="label">Hemen Al Sonra Ode</span>
-            <p>lorem lorem loremmmermemrmerm</p>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ut!</p>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
             <h4>20.000 tl</h4>
           </div>
         </div>
@@ -69,12 +72,12 @@
           <img src="./img/5.jpg" alt="pc5">
           <div class="pc-content">
             <span class="label">Hemen Al Sonra Ode</span>
-            <p>lorem lorem loremmmermemrmerm</p>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, deleniti.</p>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
             <h4>20.000 tl</h4>
           </div>
         </div>
@@ -82,12 +85,12 @@
           <img src="./img/6.jpg" alt="pc6">
           <div class="pc-content">
             <span class="label">Hemen Al Sonra Ode</span>
-            <p>lorem lorem loremmmermemrmerm</p>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, consectetur.</p>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
             <h4>20.000 tl</h4>
           </div>
         </div>
@@ -95,12 +98,12 @@
           <img src="./img/7.jpg" alt="pc7">
           <div class="pc-content">
             <span class="label">Hemen Al Sonra Ode</span>
-            <p>lorem lorem loremmmermemrmerm</p>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, velit!</p>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
             <h4>20.000 tl</h4>
             <p class="bag">Çanta Hediye</p>
           </div>
@@ -109,12 +112,12 @@
           <img src="./img/8.jpg" alt="pc8">
           <div class="pc-contetn">
             <span class="label">Hemen Al Sonra Ode</span>
-            <p>lorem lorem loremmmermemrmerm</p>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur, veniam.</p>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
+            <i class="fa-regular fa-star rating-start-filled"></i>
             <h4>20.000 tl</h4>
           </div>
         </div>
